# devops_dummy

./: .gitignore  README.md
apps/cart-service/: Dockerfile  go.mod  go.sum  main.go
apps/frontend/: Dockerfile  nginx.conf
apps/notification-worker/: Dockerfile  package.json
apps/order-service/: Dockerfile  pom.xml
apps/product-service/: Dockerfile  package.json
apps/review-service/: Cargo.toml  Dockerfile
apps/review-service/src/: main.rs
apps/user-service/: Dockerfile  database.py  main.py  models.py  requirements.txt
argocd/: app-of-apps.yaml  dev-app.yaml  prod-app.yaml  staging-app.yaml
blogs/: 01-project-design.md  02-tart-vm-kubernetes.md  03-microservice-development.md  04-container-build-deploy.md  05-data-tier-messaging.md  06-autoscaling.md  07-service-mesh-istio.md  08-monitoring-observability.md  09-gitops-argocd.md  10-loadtest-analysis.md  README.md
docs/: architecture.md  hands-on-lab.md  resource-budget.md  study-plan.csv  study-plan.md  traffic-handling.md  traffic-simulation.md  troubleshooting.md
docs/review/: 00-overview.md  01-vm-cluster-setup.md  02-container-image-build.md  03-kustomize-deploy.md  04-service-architecture.md  05-autoscaling.md  06-monitoring-observability.md  07-service-mesh-istio.md  08-gitops-argocd.md  09-loadtest-analysis.md
helm/devops-ecommerce/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
scripts/: build-images.sh  demo.sh  deploy-all.sh  deploy.sh  install-keda.sh  install-nginx-ingress.sh  run-loadtest.sh  setup.sh  teardown.sh  verify.sh
scripts/lib/: common.sh
(+72 files in other folders)
