[package]
name = "review-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web-prom = "0.8"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
